Color + spacing fix

--- a/Main/main.css
+++ b/Main/main.css
@@ -19,7 +19,7 @@ a, a:visited {
 
     width: 46vw;
     text-decoration: none;
-    color: #0A0A0A;
+    color: #050505;
 
 }
 
@@ -37,7 +37,7 @@ header {
 
 header > img {
 
-    border-right: 8px #0A0A0A solid;
+    border-right: 8px #050505 solid;
     border-radius: 15px;
     padding: 15px;
     width: 500px;
@@ -74,7 +74,7 @@ li {
 
 li:hover {
 
-    background-color: #F5F5F5;
+    background-color: #FAFAFA;
     transition: ease-in-out 0.2s;
 
 }
@@ -153,7 +153,7 @@ aside > article > h3 {
     font-size: 1.75em;
     margin: 10px;
     text-align: center;
-    border-bottom: 5px #0A0A0A solid;
+    border-bottom: 5px #050505 solid;
     border-radius: 15px;
     padding-bottom: 15px;
 
@@ -243,7 +243,7 @@ table {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #F5F5F5;
+    background-color: #FAFAFA;
     margin-top: 40px;
     margin-bottom: 40px;
     border-collapse: collapse;
@@ -297,7 +297,7 @@ footer > img {
 
 footer > p {
 
-    color:#F5F5F5;
+    color:#FAFAFA;
     text-align: center;
     font-size: 1vw;
     font-weight: 900;
